# ProjectPiedPiper

./: CMakeLists.txt  LICENSE  README.md
include/bytes/: buffer.h  dynamic_bitset.h  stream.h
include/compression/: compression.h  huffman.h  identity.h  simple.h
include/utility/: runsettings.h
source/: buffer.cpp  main.cpp
source/bytes/: stream.cpp
source/compression/: huffman.cpp
source/utility/: runsettings.cpp
tests/bytes/: dynamic_bitset.cpp  stream.cpp
tests/compression/: huffman.cpp  identity.cpp  simple.cpp
tests/utility/: runsettings_tests.cpp
